--- a/DECODIFICADOR/index.html
+++ b/DECODIFICADOR/index.html
@@ -8,16 +8,26 @@
     <title>Document</title>
 </head>
 <header>
-
+    <div class="logoAlign">
+        <img src="img/logo.png" alt="logo">
+    </div>
 </header>
+
+
 <body>
-    <div>
-        <textarea name="textCrypt" id="" cols="30" rows="10" placeholder="Digite o seu texto"></textarea>
-        <div>
-            <button class = "criptografar"></button>
-            <button class="descriptografar"></button>
+
+    <div id ="decodificador-wrapper">
+        <label for="textCrypt"></label>
+        <textarea name="textCrypt" id="textCrypt" cols="30" rows="10" placeholder="Digite o seu texto"></textarea>
+        <div id = "button-wrap">
+            <div class="db-buttons">
+            <button class = "criptografar">Criptografar</button>
+            <button class = "descriptografar">Descriptografar</button>
+            </div>
         </div>
     </div>
+
 </body>
+
 <footer></footer>
 </html>
