--- a/DECODIFICADOR/index.html
+++ b/DECODIFICADOR/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/main.css">
     <title>Document</title>
 </head>
+<body>
+
 <header>
     <div class="logoAlign">
         <img src="img/logo.png" alt="logo">
@@ -14,20 +16,27 @@
 </header>
 
 
-<body>
+
 
     <div id ="decodificador-wrapper">
-        <label for="textCrypt"></label>
-        <textarea name="textCrypt" id="textCrypt" cols="30" rows="10" placeholder="Digite o seu texto"></textarea>
+        <textarea name= "textCrypt" id="textCrypt" cols="30" rows="10" placeholder="Digite o seu texto"></textarea>
         <div id = "button-wrap">
-            <div class="db-buttons">
-            <button class = "criptografar">Criptografar</button>
-            <button class = "descriptografar">Descriptografar</button>
+            <div class="button">
+            <input value ="cripto" id ="buttonCrypt" type ="submit" class = "criptografar"></button>
+            <input value ="decripto" id ="buttonDcrypt" type ="submit" class = "descriptografar"></button>
             </div>
         </div>
     </div>
 
+
+
+
+    <div class="textoSolucao">
+            <textarea class = "solucao" name="textSolucao" id="textSolucao" cols="30" rows="10" placeholder="Informe uma mensagem"></textarea>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 <footer></footer>
+
 </html>
